<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patient Record System</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="viewallpatients">View Patients</string>
    <string name="addpatient">Add Patient</string>
    <string name="welcomenote">Patient Records for Medical Professionals</string>
    <string name="searchfirstname">Search firstname</string>
    <string name="fullname">Patient\'s Name</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="bday">Birthday:</string>
    <string name="telphone">Tel. No.</string>
    <string name="lastffup">Last FF Up:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="personalinfo">Personal Info</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="medications">Medications</string>
    <string name="ancillaryprocedure">Ancillary Procedure</string>
    <string name="prescription">Prescription</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="viewrecord">View Record</string>
    <string name="about">About</string>
    <string name="bp">BP</string>
    <string name="heart">Heart Rate</string>
    <string name="diabetes">Diabetes</string>
    <string name="lung">Lung</string>
    <string name="brain">Brain/Nerve</string>
    <string name="muscle">Muscle</string>
    <string name="abdomen">Abdomen</string>
    <string name="urine">Urine/Prostate</string>
    <string name="gout">Gout</string>
    <string name="vaccination">Vaccination</string>
    <string name="updatepatient">Edit Patient</string>
    <string name="sortby">Sort by</string>
    <string name="search">Search</string>
    <string name="search_title">Search</string>

</resources>
