<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/fullname"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/firstname"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="3dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/lname"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/fullname"
        android:layout_marginTop="5dp"
        android:text="@string/lastname"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/diagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/diagnosis"
        android:textColor="@color/black" />
    
     </RelativeLayout>
     
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
     
    <TextView
        android:id="@+id/lastffupcontainer"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastffup"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/black" />
        
    <TextView
        android:id="@+id/lastffup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastffup"
        android:layout_marginTop="5dp"
        android:textColor="@color/black" />
        
   </LinearLayout>
 
</LinearLayout>