<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_home_bar" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >
      
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/listview_rounded_corners"
          android:orientation="vertical"
          android:padding="10dip" >


    
    
    <Button
        android:id="@+id/btViewDiagnosis"
        android:background="@drawable/rounded_buttons_viewpatient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/diagnosis" />

    

    <Button
        android:id="@+id/btViewMedications"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:background="@drawable/rounded_buttons_viewpatient"
        android:text="@string/medications" />

    <Button
        android:id="@+id/btViewAncillaryProcedure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:background="@drawable/rounded_buttons_viewpatient"
        android:text="@string/ancillaryprocedure" />

    <Button
        android:id="@+id/btViewPrescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:background="@drawable/rounded_buttons_viewpatient"
        android:text="@string/prescription" />

    
    
    </LinearLayout> 
    
    </ScrollView>

</LinearLayout>
